--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,7 +20,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+     "start:dev": "nest start --watch",
+  "postinstall": "prisma generate"
   },
   "dependencies": {
     "@nestjs/bull": "^11.0.4",
