--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,15 +14,14 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-     "start:dev": "nest start --watch",
-  "postinstall": "prisma generate"
+     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@nestjs/bull": "^11.0.4",
